static/css/style.css
@font-face {font-family: "Krungthep"; src: url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.eot"); src: url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.woff") format("woff"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.svg#Krungthep") format("svg"); }

body {
    background-color: #00BEBB;
    font-family: "Krungthep";
    color: #eee;
}

nav {
    background-color: #E7E4C6;
    border-color: #E7E4C6;
    color: white;
}

hr {
    margin-top: 2rem;
    margin-bottom: 2rem;
    width: 70%;
    border-width: 10px;
    border-color: #F5665B;
  }

h2 {
    text-align: center;
}
h3 {
    text-align: center;
}
h4 {
    text-align: center;
}
h5 {
    text-align: center;
}
h6 {
    text-align: center;
    margin-right: 100px;
	margin-left: 100px;
}

div.main-logo {
    margin-top: 16px;
}

.sponsors {
    text-align: center;
    display: block;
    padding: 20px;
}

.sponsors > div {
    margin-bottom: 40px;
}

.sponsors > div:last-child {
    margin-bottom: 0;
}


.sponsors img {
	display: inline-block;
    margin-right: 40px;
    max-width: 100%;
}

.title-sponsors img{
    max-height: 90px;
}

.silver-sponsors img {
	max-height: 25px;
}

a {
    color: black;
}

